syntax = "proto3";

option go_package = "gitlab.com/schedule-golf/nicklaus/protos";

package schedule_golf.hello.v1alpha1;

// The greeter service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}